Improve styling on mobile for chat view Works around issues with vh on iOS

--- a/client/src/pages/Chat.css
+++ b/client/src/pages/Chat.css
@@ -1,7 +1,28 @@
-.chat-row {
-  height: calc(100vh - 80px);
+@media (min-device-width: 768px) {
+  .chat-row {
+    height: calc(100vh - 80px);
+  }
+}
+
+@media (max-device-width: 768px) {
+  .row.chat-row {
+    position: absolute;
+    top: 80px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
 }
 
 .chat-col {
   height: 100%;
+}
+
+@media (max-device-width: 768px) {
+  .chat-row .chat-col {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
 }
